--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -7,6 +7,7 @@
   background: url(https://www.codeyoung.com/_nuxt/img/math_nav_bar.0d9a54c.svg);
   position: sticky !important;
   top: 0;
+  z-index: 1;
 }
 .advertise-top-box a {
   color: #0D6EFD;
@@ -16,6 +17,7 @@
   border-bottom-color: white;
   width: fit-content;
 }
+
 
 /* Feature 1 */
 .home-banner {
