--- a/src/CSS/CodingCourse.css
+++ b/src/CSS/CodingCourse.css
@@ -1,5 +1,6 @@
 .coding-course-body{
     padding: 100px 40px;
+    text-align: center;
 }
 .coding-course-body h2{
     text-align: center;
@@ -29,4 +30,16 @@
 }
 #grd1-2{
     background-color: #FFF0CC;
+}
+.explore-math-courses-p{
+    background-color: #ff712d;
+    border: 0px;
+    border-radius: 10px;
+    font-size: 15px;
+    color: white;
+    padding: 14px 32px;
+    text-decoration: underline;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 40px auto;
 }
