--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -3,7 +3,9 @@
     font-size: 44px;
     color: white;
     text-align: center;
-    padding: 8px 0px;
+    padding: 16px 0px;
+    font-weight: 600;
+    line-height: 1.2;
 }
 .about-img{
     width: 90%;
